--- a/src/css/secret.css
+++ b/src/css/secret.css
@@ -1,9 +1,16 @@
 @CHARSET "UTF-8";
 
+* {
+	margin: 0;
+	padding: 0;	
+}
+
 html body {
 	text-align: center;
 	font-family: Tahoma, Arial, Sans-serif;	
 	font-size: 9pt;
+	
+	padding: 10px;
 }
 
 .clear {
