--- a/src/css/index.css
+++ b/src/css/index.css
@@ -146,7 +146,13 @@ button {
 	border: solid 1px #C5D7EF;
 	background-color: #FFFFFF;
 	
-	width: 190px;
+	width: 180px;
 	min-height: 200px;
+
+	padding: 5px;
 	float: right;
+}
+
+.board .sidebar bd {
+
 }
