--- a/src/template/Links.html
+++ b/src/template/Links.html
@@ -10,7 +10,7 @@
 				<a href="http://www.wjl.cn">wjl.cn</a>
 			</li>
 			<li>
-				<a href="menu/digg.php">Menu Digg</a>
+				<a href="menu/digg.php">Food Menu</a>
 			</li>
 		</ul>
 	</div>
