--- a/src/css/index.css
+++ b/src/css/index.css
@@ -43,6 +43,17 @@ div.form-field {
 	margin: 0 0 5px;
 }
 
+div.form-field label {
+	display: -moz-inline-stack;
+	*display: inline-block;
+	min-width: 80px;
+}
+
+div.form-field label a {
+	margin-left: 60px;	
+	*margin-left: 0;	
+}
+
 input.text, input.password, input.tiny {
 	border: solid 1px #C5D7EF;
 	font-size: 12px;
@@ -99,14 +110,19 @@ input.text, input.password, input.tiny {
 	padding: 5px;
 }
 
+.board .content .update form {
+	/*border: solid 1px #C5D7EF;
+	padding: 10px;*/
+	
+	margin: 3px 0;
+}
+
 .board .content .update textarea {
 	border: solid 1px #C5D7EF;
-	font-family: Tahoma, Helvetica, sans-serif;
 	font-size: 12px;
 	width: 580px;
 	line-height: 120%;
-	
-	margin: 3px 0;
+
 	padding: 3px;
 	overflow: auto;
 }
@@ -115,8 +131,8 @@ input.text, input.password, input.tiny {
 	text-align: center;
 }
 
-.board .content .update .share-tool input.tiny {
-	width: 64px;
+.board .content .update input.tiny {
+	width: 150px;
 }
 
 .board .content .timeline {
@@ -166,7 +182,8 @@ input.text, input.password, input.tiny {
 
 .board .content .timeline .bd ul li a img {
 	border: solid 1px #C7C7C7;
-		
+	width: 48px;
+	height: 48px;
 	padding: 1px;
 }
 
