--- a/trunk/src/template/PostPanel.html
+++ b/trunk/src/template/PostPanel.html
@@ -10,7 +10,7 @@
 	</li>
 </ul>
 <div class="g-tab-panel-content">
-	<form id="message-form" action="digg-item.php?create" method="post">
+	<form id="message-form" action="digg-item.php?new" method="post">
 		<div class="form-field">
 			<textarea id="secret" name="secret" rows="4" cols="40"></textarea>
 		</div>
@@ -37,7 +37,7 @@
 		</div>
 	</form>
 	
-	<form id="music-form" action="digg-item.php?create&type=music" method="post" style="display: none;">
+	<form id="music-form" action="digg-item.php?new&type=music" method="post" style="display: none;">
 		<div class="form-field">
 			<label for="name">Music name:</label>
 			<input id="music-name" name="name" type="text" class="text"></input>
@@ -53,7 +53,7 @@
 		</div>
 	</form>
 	
-	<form id="image-form" action="digg-item.php?create&type=image" method="post" style="display: none;">
+	<form id="image-form" action="digg-item.php?new&type=image" method="post" style="display: none;">
 		<div class="form-field">
 			<label for="name">Image name:</label>
 			<input id="image-name" name="name" type="text" class="text"></input>
