--- a/src/template/Advertisments.html
+++ b/src/template/Advertisments.html
@@ -1,4 +1,4 @@
-<div class="ad" class="g-panel">
+<div id="ad" class="g-panel">
 	<div class="bd" style="margin-top: 5px;">
 		<script type="text/JavaScript"> 
 			alimama_pid="mm_10730599_774820_1567895"; 
