--- a/trunk/src/css/g-panel.css
+++ b/trunk/src/css/g-panel.css
@@ -80,3 +80,9 @@
 	color: #FFFFFF;
 }
 
+.g-tip {
+	display: none;
+	border: solid 1px #C5D7EF;
+	background: #E5ECF9 url(assets/animated_loading.gif) center center no-repeat;
+	height: 100px;	
+}
