--- a/src/css/user-setting.css
+++ b/src/css/user-setting.css
@@ -10,25 +10,31 @@
 }
 
 .avator-preview {
-		
 }
 
 .avator-preview img {
-	float: left;
-	padding-left: -96px;
+
 }
 
-.avator-preview .info {
-	margin-left: 5px;
-	padding: 0 0 0 100px;
+.info {
+
 }
 
-.avator-preview span {
+.info span {
 	display: block;
 	margin: 5px 0;
 }
 
 .avator-form {
-	margin-left: 100px;
-	padding: 0 5px;	
+	padding: 0 5px;
+}
+
+.g-tab-content {
+	width: 400px;
+	height: 300px;
+	
+	padding: 10px 0;
+	
+	margin-left: auto;
+	margin-right: auto;
 }
