--- a/src/template/Links.html
+++ b/src/template/Links.html
@@ -1,16 +1,19 @@
 <div id="links" class="g-panel">
 	<div class="hd">
 		<span>
-			Links
+			链接
 		</span>
 	</div>
 	<div class="bd">
 		<ul>
 			<li>
-				<a href="http://www.wjl.cn">wjl.cn</a>
+				<a href="http://www.wjl.cn">望江楼</a>
 			</li>
 			<li>
-				<a href="menu/digg.php">Food Menu</a>
+				<a href="menu/digg.php">点餐 - 顶</a>
+			</li>
+			<li>
+				<a href="http://bbiao.spaces.live.com">妖气重重</a>
 			</li>
 		</ul>
 	</div>
