--- a/trunk/src/template/Banner.html
+++ b/trunk/src/template/Banner.html
@@ -1,12 +1,16 @@
-<div id="banner" class="box-top-blue banner">	
+<div id="banner" class="banner">	
 	<div class="hd">
-		<h2>Twigg</h2>
-		<span>Twitter 'n Digg - Place you can express yourself and listen to others</span>
+		<!-- 
+		<h2>Twigg - 小秘密</h2>
+		<span>Place you can express yourself and listen to others</span>
+		-->
+		
+		<img src="images/logo.png"></img>
 	</div>
 	<div class="bd">
 		<ul>
-			<li><a href="http://digg.wjl.cn">Home</a></li>
-			<li><a href="user-setting.php">Settings</a></li>
+			<li><a href="/">首页</a></li>
+			<li><a href="user-setting.php">设置</a></li>
 		</ul>
 	</div>
 </div>
