--- a/trunk/src/css/common.css
+++ b/trunk/src/css/common.css
@@ -46,7 +46,7 @@ div.form-field {
 div.form-field label {
 	display: -moz-inline-stack;
 	*display: inline-block;
-	min-width: 80px;
+	/*min-width: 40px;*/
 }
 
 div.form-field label a {
