--- a/src/template/Banner.html
+++ b/src/template/Banner.html
@@ -36,6 +36,7 @@
 		<ul>
 			<li><a href="/">首页</a></li>
 			<li><a href="user-setting.php">设置</a></li>
+			<li><a href="login.php">登录</a></li>
 		</ul>
 	</div>
 </div>
