--- a/trunk/src/css/user-setting.css
+++ b/trunk/src/css/user-setting.css
@@ -22,6 +22,7 @@
 
 .info span {
 	display: block;
+	line-height: 23px;
 	margin: 5px 0;
 }
 
@@ -37,4 +38,45 @@
 	
 	margin-left: auto;
 	margin-right: auto;
+}
+
+input, button, select {
+	font-size: 12px;
+	vertical-align: middle;
+}
+
+input.tiny {
+	width: 4em;
+}
+
+input.large {
+	width: 200px;
+}
+
+select {
+	height: 21px;
+	padding: 2px 2px 2px 0pt;
+}
+
+option {
+	padding: 0pt 2px;
+}
+
+label {
+	width: 80px;
+	text-align: right;
+	
+	margin-right: 15px;
+	float: left;
+}
+
+div.form-field.action {
+	padding-left: 95px;	
+}
+
+form h3 {
+	border-bottom: 1px solid #EEEEEE;
+	color: #444444;
+	font-size: 13px;
+	margin: 5px 0pt 5px 95px;	
 }
