--- a/branches/diggigniter/WebContent/system/public/css/common.css
+++ b/branches/diggigniter/WebContent/system/public/css/common.css
@@ -39,6 +39,18 @@ input, input.text, input.password, input.tiny, textarea, select {
 	padding: 3px 4px;
 }
 
+span.select {
+	border-color: #7C7C7C #C3C3C3 #DDDDDD;
+	border-style: solid;
+	border-width: 1px;
+	
+	overflow: hidden
+}
+
+span.select select {
+	margin: -2px;
+}
+
 button, input.button {
 	border: none;
 	background: url(assets/digg-button-thin.png) left top no-repeat;
@@ -83,5 +95,5 @@ input.tiny {
 }
 
 div.form-field input.large {
-	width: 280px;
+	/*width: 280px;*/
 }
