--- a/branches/diggigniter/WebContent/system/public/css/user-setting.css
+++ b/branches/diggigniter/WebContent/system/public/css/user-setting.css
@@ -41,3 +41,16 @@ form h3 {
 	font-size: 13px;
 	margin: 5px 0pt 5px 95px;	
 }
+
+.avator-preview {
+	width: 400px;
+	height: 300px;
+	
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.avator-preview img {
+	max-width: 300px;
+	max-height: 300px;
+}
